Add: サイドバーからユーザー一覧にアクセスするためのパスを追加

--- a/app/views/admin/shared/_sidebar.html.slim
+++ b/app/views/admin/shared/_sidebar.html.slim
@@ -13,7 +13,7 @@ aside.main-sidebar.sidebar-dark-primary.elevation-4
     nav.mt-2
       ul.nav.nav-pills.nav-sidebar.flex-column[data-widget="treeview" role="menu" data-accordion="false"]
         li.nav-item
-          = link_to '#', class: "nav-link" do
+          = link_to admin_users_path, class: "nav-link" do
             i.nav-icon.far.fa-user
             p
               |  ユーザー一覧 
