--- a/app/views/admin/users/_user.html.slim
+++ b/app/views/admin/users/_user.html.slim
@@ -10,4 +10,4 @@ tr
   td
     = link_to '編集', edit_admin_user_path(user), class: %i[btn btn-success]
   td
-    = link_to '削除', admin_user_path(user), method: :delete, class: %i[btn btn-danger]
+    = link_to '削除', admin_user_path(user), method: :delete, class: %i[btn btn-danger], data: { confirm: t('defaults.message.delete_confirm') }
