--- a/app/views/admin/users/show.html.slim
+++ b/app/views/admin/users/show.html.slim
@@ -5,7 +5,7 @@
         | User#show
       .text-right.mb-3
         = link_to '編集', edit_admin_user_path(@user), class: %i[btn btn-success]
-        = link_to '削除', admin_user_path(@user), method: :delete, class: %i[btn btn-danger], data: { confirm: '削除しますか？'}
+        = link_to '削除', admin_user_path(@user), method: :delete, class: %i[btn btn-danger], data: { confirm: t('defaults.message.delete_confirm') }
       table.table.table-bordered.bg-white
         tbody
           tr
