Add: アイテム管理に関するルーティングとサイドバーへのリンクを追加

--- a/app/views/admin/shared/_sidebar.html.slim
+++ b/app/views/admin/shared/_sidebar.html.slim
@@ -18,7 +18,7 @@ aside.main-sidebar.sidebar-dark-primary.elevation-4
             p
               |  ユーザー一覧 
         li.nav-item
-          = link_to '#', class: "nav-link" do
+          = link_to admin_items_path, class: "nav-link" do
             i.nav-icon.fas.fa-mouse
             p
               |  アイテム一覧
