Add: アイテム管理に関するビューファイルの記述を追加

--- a/app/views/admin/items/edit.html.slim
+++ b/app/views/admin/items/edit.html.slim
@@ -1,2 +1,27 @@
-h1 Admin::Items#edit
-p Find me in app/views/admin/items/edit.html.slim
+.container
+  .row
+    .col-md-10.offset-md-1.col-lg-8.offset-lg-2
+      h1
+        | item#edit
+
+      .box.box-primary
+        = simple_form_for(@item, url: admin_item_path) do |f|
+          .box-body
+            = f.input :name
+
+            = f.input :price
+
+            = f.input :rakuten_url
+
+            = f.input :amazon_url
+
+            = f.input :image, as: :file, class: 'form-control mb-3', accept: 'image/*'
+            = f.hidden_field :image_cache
+            .mt-3.mb-3
+              = image_tag @item.image.url,
+                          class: 'rounded-circle',
+                          id: 'preview',
+                          size: '300x300'
+
+          .box-footer
+            = f.button :submit, class: %w[btn btn-primary]
