Add: 商品コードカラムの追加

--- a/app/views/admin/items/show.html.slim
+++ b/app/views/admin/items/show.html.slim
@@ -15,6 +15,11 @@
               = @item.id
           tr
             th[scope="row"]
+              | コード
+            td
+              = @item.item_code
+          tr
+            th[scope="row"]
               | 商品名
             td
               = @item.name
