--- a/app/views/admin/items/edit.html.slim
+++ b/app/views/admin/items/edit.html.slim
@@ -7,6 +7,8 @@
       .box.box-primary
         = simple_form_for(@item, url: admin_item_path) do |f|
           .box-body
+            = f.input :item_code
+
             = f.input :name
 
             = f.input :price
@@ -14,14 +16,6 @@
             = f.input :rakuten_url
 
             = f.input :amazon_url
-
-            = f.input :image, as: :file, class: 'form-control mb-3', accept: 'image/*'
-            = f.hidden_field :image_cache
-            .mt-3.mb-3
-              = image_tag @item.image.url,
-                          class: 'rounded-circle',
-                          id: 'preview',
-                          size: '300x300'
 
           .box-footer
             = f.button :submit, class: %w[btn btn-primary]
