Add: サイドメニューのアクティブ化のためのメソッドを定義

--- a/app/javascript/stylesheets/admin.scss
+++ b/app/javascript/stylesheets/admin.scss
@@ -1,2 +1,6 @@
 @import 'admin-lte/plugins/fontawesome-free/css/all.min';
 @import 'admin-lte/dist/css/adminlte.min';
+
+.active {
+  background-color: #007bff;
+}
