--- a/app/views/admin/items/index.html.slim
+++ b/app/views/admin/items/index.html.slim
@@ -12,6 +12,8 @@
               = f.search_field :name_cont, class: 'form-control', placeholder: '検索ワード'
             .col-auto
               = f.submit value: '検索', class: 'btn btn-primary'
+            .col-auto
+              = link_to 'アイテム追加', new_admin_item_path, class: 'btn btn-secondary'
               
 table.table.table-striped
   thead
