--- a/app/views/admin/items/show.html.slim
+++ b/app/views/admin/items/show.html.slim
@@ -2,7 +2,7 @@
   .row
     .col-md-10.offset-md-1.col-lg-8.offset-lg-2
       h1
-        | item#show
+        = t('.title')
       .text-right.mb-3
         = link_to '編集', edit_admin_item_path(@item), class: %i[btn btn-success]
         = link_to '削除', admin_item_path(@item), method: :delete, class: %i[btn btn-danger], data: { confirm: t('defaults.message.delete_confirm') }
@@ -15,36 +15,36 @@
               = @item.id
           tr
             th[scope="row"]
-              | コード
+              = t('activerecord.attributes.item.item_code')
             td
               = @item.item_code
           tr
             th[scope="row"]
-              | 商品名
+              = t('activerecord.attributes.item.name')
             td
               = @item.name
           tr
             th[scope="row"]
-              | 価格
+              = t('activerecord.attributes.item.price')
             td
               = @item.price
           tr
             th[scope="row"]
-              | 商品イメージ
+              = t('activerecord.attributes.item.image')
             td
               = image_tag @item.image, width: 300, height: 'auto'
           tr
             th[scope="row"]
-              | 楽天リンク
+              = t('activerecord.attributes.item.rakuten_url')
             td
               = text_url_to_link(@item.rakuten_url).html_safe if @item.rakuten_url.present?
           tr
             th[scope="row"]
-              | Amazonリンク
+              = t('activerecord.attributes.item.amazon_url')
             td
               = text_url_to_link(@item.amazon_url).html_safe if @item.amazon_url.present?
           tr
             th[scope="row"]
-              | 作成日時
+              = t('activerecord.attributes.item.created_at')
             td
               = l(@item.created_at, format: :short)
