--- a/app/views/admin/users/edit.html.slim
+++ b/app/views/admin/users/edit.html.slim
@@ -2,7 +2,7 @@
   .row
     .col-md-10.offset-md-1.col-lg-8.offset-lg-2
       h1
-        | User#edit
+        = t('.title')
 
       .box.box-primary
         = simple_form_for(@user, url: admin_user_path) do |f|
