--- a/app/views/admin/users/_user.html.slim
+++ b/app/views/admin/users/_user.html.slim
@@ -8,6 +8,6 @@ tr
   td
     = l(user.created_at, format: :short)
   td
-    = link_to '編集', edit_admin_user_path(user), class: %i[btn btn-success]
+    = link_to '編集', edit_admin_user_path(user), class: %i[btn btn-success], data: { turbolinks: false }
   td
     = link_to '削除', admin_user_path(user), method: :delete, class: %i[btn btn-danger], data: { confirm: t('defaults.message.delete_confirm') }
