--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -7,8 +7,8 @@ p
     .col-md-2
       = link_to 'マイページ', user_path(current_user.id)
     .col-md-2
-      = link_to '新規投稿', new_post_path
+      = link_to '新規投稿', new_post_path, data: { turbolinks: false }
     .col-md-2
-      = link_to 'プロフィール編集', edit_profile_path
+      = link_to 'プロフィール編集', edit_profile_path, data: { turbolinks: false }
     .col-md-2
       = link_to t('defaults.logout'), logout_path, method: :delete
