--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -3,10 +3,9 @@
     .box-body
       = f.input :images, as: :file, input_html: { multiple: true }, accept: 'image/*'
       .mt-3.mb-3
-        = image_tag '', id: 'post_img_prev', size: '400x300'
+        = image_tag '', id: 'post_img_prev', width: '400'
         p
         = link_to '削除', id: 'delete_img'
-            
 
       = f.input :body, as: :text
 
