--- a/app/views/posts/_post.html.slim
+++ b/app/views/posts/_post.html.slim
@@ -2,7 +2,7 @@ div id="post-id-#{post.id}"
   .col
     .card
       = link_to post_path(post)
-        = image_tag post.post_images.first.image_url, alt: 'post-img', class: 'card-img-top', size: '300x300'
+        = image_tag post.post_images.first.image_url(:thumb), alt: 'post-img', class: 'card-img-top', size: '300x300'
       .card-body
         ul class='list-inline'
           li class='list-inline-item'
