--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -5,7 +5,7 @@
     | Posts#show
   .row
     .col-sm-4.col-md-6
-      = image_tag @post.post_images.first.image_url, size: '600x400'
+      = image_tag @post.post_images.first.image_url(:main), size: '600x400'
     .col-sm-3.col-md-6
       .card
         .card-body
