Fix: 投稿削除時に確認ダイアログが出るように修正

--- a/app/views/posts/_crud_menus.html.slim
+++ b/app/views/posts/_crud_menus.html.slim
@@ -3,5 +3,5 @@ ul class='crud-menu-btn list-inline float-right'
     = link_to edit_post_path(post), id: "button-edit-#{post.id}" do
       i class="fas fa-pen"
   li class='list-inline-item'
-    = link_to post_path(post), id: "button-delete-#{post.id}", method: :delete do
+    = link_to post_path(post), id: "button-delete-#{post.id}", method: :delete, data: { confirm: t('defaults.message.delete_confirm') } do
       i class="fas fa-trash"
