Add: 投稿画像の推奨サイズを記載

--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -3,6 +3,8 @@
     .box-body
       = f.input :images, as: :file, input_html: { multiple: true }, accept: 'image/*'
       .mt-3.mb-3
+        = '推奨サイズ: 4x3'
+        p
         = image_tag '', id: 'post_img_prev', width: '400'
         p
         = link_to '削除', id: 'delete_img'
