--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,6 +1,6 @@
-@import '~bootstrap/scss/bootstrap';
-
+// レイアウトファイル
 $fa-font-path: '@fortawesome/fontawesome-free/webfonts';
 @import '@fortawesome/fontawesome-free/scss/fontawesome';
 
+// 自作ファイル
 @import 'item_search_modal';
