--- a/app/views/shared/_before_login_header.html.slim
+++ b/app/views/shared/_before_login_header.html.slim
@@ -1,7 +1,6 @@
 nav.is-dark.navbar[role="navigation" aria-label="main navigation"]
   .navbar-brand
-    .navbar-item
-      = link_to root_path, data: { turbolinks: false }
+    = link_to root_path, class: 'navbar-item', data: { turbolinks: false }
         = image_tag 'buildesk_logo.png', size: '112x28'
     a.navbar-burger[role="button" aria-label="menu" aria-expanded="false" data-target="navMenu"]
       span[aria-hidden="true"]
@@ -11,13 +10,4 @@ nav.is-dark.navbar[role="navigation" aria-label="main navigation"]
     .navbar-end
       .navbar-item
         = link_to t('defaults.login'), login_path, class: 'button is-rounded has-text-black has-text-weight-semibold', data: { turbolinks: false }
-
-nav.navbar.is-dark.is-fixed-bottom[role="navigation"]
-  .navbar-brand
-    a.navbar-item.is-expanded.is-block.has-text-centered
-      i.fa.fa-home
-    a.navbar-item.is-expanded.is-block.has-text-centered
-      i.fa.fa-search
-    a.navbar-item.is-expanded.is-block.has-text-centered
-      i.fa.fa-user
       
