--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,6 +5,7 @@ html
     = csp_meta_tag
 
     meta[name="viewport" content="width=device-width, initial-scale=1"]
+    = stylesheet_link_tag "https://unpkg.com/bulmaswatch/darkly/bulmaswatch.min.css"
     = stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
   
