--- a/app/views/shared/_before_login_header.html.slim
+++ b/app/views/shared/_before_login_header.html.slim
@@ -1,13 +1,14 @@
 nav.is-dark.navbar[role="navigation" aria-label="main navigation"]
-  .navbar-brand
-    = link_to root_path, class: 'navbar-item', data: { turbolinks: false }
-        = image_tag 'buildesk_logo.png', size: '112x28'
-    a.navbar-burger[role="button" aria-label="menu" aria-expanded="false" data-target="navMenu"]
-      span[aria-hidden="true"]
-      span[aria-hidden="true"]
-      span[aria-hidden="true"] 
-  #navMenu.navbar-menu
-    .navbar-end
-      .navbar-item
-        = link_to t('defaults.login'), login_path, class: 'button is-rounded is-primary is-inverted has-text-weight-semibold', data: { turbolinks: false }
+  .container
+    .navbar-brand
+      = link_to root_path, class: 'navbar-item', data: { turbolinks: false }
+          = image_tag 'buildesk_logo.png', size: '112x28'
+      a.navbar-burger[role="button" aria-label="menu" aria-expanded="false" data-target="navMenu"]
+        span[aria-hidden="true"]
+        span[aria-hidden="true"]
+        span[aria-hidden="true"] 
+    #navMenu.navbar-menu
+      .navbar-end
+        .navbar-item
+          = link_to t('defaults.login'), login_path, class: 'button is-rounded is-primary is-inverted has-text-weight-semibold', data: { turbolinks: false }
       
