--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -13,4 +13,4 @@
       = f.input :password_confirmation, label_html: { class: 'label' }, input_html: { class: 'input' }
   .field
     .control
-      = f.button :submit, class: %w[has-text-light has-text-weight-bold button is-dark is-fullwidth]
+      = f.button :submit, class: %w[has-text-weight-bold button is-success is-fullwidth]
