--- a/app/views/shared/_before_login_header.html.slim
+++ b/app/views/shared/_before_login_header.html.slim
@@ -11,4 +11,15 @@ nav.is-dark.navbar[role="navigation" aria-label="main navigation"]
       .navbar-end
         .navbar-item
           = link_to t('defaults.login'), login_path, class: 'button is-rounded is-primary is-inverted has-text-weight-semibold', data: { turbolinks: false }
-      
+
+  / ボトムナビゲーションバー
+  nav.navbar.is-dark.is-fixed-bottom[role="navigation"]
+    .navbar-brand
+      = link_to root_path, class: 'navbar-item is-expanded is-block has-text-centered', data: { turbolinks: false } do
+        i.fa.fa-home
+        p.is-size-7
+          | Home
+      = link_to login_path, class: 'navbar-item is-expanded is-block has-text-centered', data: { turbolinks: false } do
+        i.fa.fa-user
+        p.is-size-7
+          | Login
