--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,12 +1,14 @@
 - set_meta_tags title: t('.title'), og: { og_title: t('.og_title')}
 
-.container
-  h1 
-    | Posts#index
-  p
-  #new_arrival
-    .row.row-cols-1.row-cols-sm-2.row-cols-md-3.g-3
+section.hero
+  .hero-body
+    .container
+      p.title.has-text-weight-bold
+        = t('.title')
+section.section#new_arrival
+  .container
+    .columns.is-multiline.is-mobile.is-variable.is-3-desktop.is-1-mobile
       - if @posts.present?
-        = render @posts
+        = render partial: 'post_image', collection: @posts
       - else
         = '投稿がありません'
