Fix: S3から画像配信するための修正

--- a/app/views/users/non_user.html.slim
+++ b/app/views/users/non_user.html.slim
@@ -12,7 +12,7 @@ main.columns.is-centered.is-marginless
                 .media
                   .media-left
                     figure.image.is-48x48
-                      = image_tag '/images/user_logo_blue.png', class: 'is-rounded'
+                      = image_tag 'https://image.buildesk.app/images/user_logo_blue.png', class: 'is-rounded'
                   .media-content
                     p.title.is-4.has-text-weight-bold
                       = 'Not found user'
