--- a/app/views/shared/_before_login_header.html.slim
+++ b/app/views/shared/_before_login_header.html.slim
@@ -2,14 +2,14 @@ nav.is-dark.navbar[role="navigation" aria-label="main navigation"]
   .container
     .navbar-brand
       = link_to root_path, class: 'navbar-item', data: { turbolinks: false }
-          = image_tag '/images/buildesk_logo.png', size: '112x28'
+          = image_tag('https://image.buildesk.app/images/buildesk_logo.png', size: '112x28')
       a.navbar-burger[role="button" aria-label="menu" aria-expanded="false" data-target="navMenu"]
         span[aria-hidden="true"]
         span[aria-hidden="true"]
         span[aria-hidden="true"] 
     #navMenu.navbar-menu
       .navbar-end
-        = link_to t('posts.index.title'), posts_path, class: 'navbar-item', data: { turbolinks: false }
+        = link_to 'デスク一覧', posts_path, class: 'navbar-item', data: { turbolinks: false }
         .navbar-item
           = link_to t('defaults.login'), login_path, class: 'button is-rounded is-primary is-inverted has-text-weight-semibold', data: { turbolinks: false }
 
