Add: いいね数の表示を追加／視認性向上のため編集削除ボタンをドロップダウンに変更

--- a/app/views/categories/show.html.slim
+++ b/app/views/categories/show.html.slim
@@ -7,6 +7,6 @@ main.columns.is-centered.is-marginless
         br
         p.title.has-text-weight-bold
           = t("category.#{@category.name}")+'のデスク'
-        .columns.is-multiline.is-variable.is-3-desktop.is-1-mobile
+        .columns.is-multiline.is-mobile.is-variable.is-3-desktop.is-1-mobile
           - if @posts.present?
             = render partial: 'posts/post_3col', collection: @posts
