Remove: 不必要なためいいねした投稿を取得表示しない

--- a/app/views/posts/bookmarks.html.slim
+++ b/app/views/posts/bookmarks.html.slim
@@ -12,4 +12,4 @@ main.columns.is-centered.is-marginless
             = render partial: 'post_image', collection: @bookmark_posts
           - else
             .section
-              | ブックマークした投稿がありません
+              | 保存した投稿がありません
