--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -26,17 +26,12 @@ main.columns.is-centered.is-marginless
                     
               footer.card-footer id="user-link-id-#{@user.uuid}"
                 - if current_user == @user
-                  = link_to likes_posts_path, class: 'card-footer-item'
-                    span.icon-text
-                      i.fas.fa-heart
-                      span
-                        = ' Like'
                   = link_to bookmarks_posts_path, class: 'card-footer-item'
                     span.icon-text
                       i.fa.fa-bookmark
                       span
                         = ' List'
-                = link_to "https://twitter.com/share?url=#{request.url}&text=#{@user.name}のデスク集&hashtags=Buildesk,デスク周り,デスクツアー", title: 'Twitter', target: '_blank', class: 'card-footer-item'
+                = link_to "https://twitter.com/share?url=#{request.url}&text=#{@user.name}のデスク＆アイテム集&hashtags=Buildesk,デスク周り,デスクツアー", title: 'Twitter', target: '_blank', class: 'card-footer-item'
                   span.icon-text
                     i.fab.fa-twitter
                     span
