--- a/app/javascript/stylesheets/bulma_override.scss
+++ b/app/javascript/stylesheets/bulma_override.scss
@@ -38,3 +38,14 @@
 .field_with_errors {
   display: inline;
 }
+
+/* footerを常時固定 */
+.site {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.site-content {
+  flex: 1;
+}
