--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -39,19 +39,24 @@ main.columns.is-centered.is-marginless
           .column.is-half
             p.title.has-text-weight-bold.is-4
               = "#{truncate(@user.name, length: 12)}のデスク遍歴"
-            .columns.is-multiline.is-mobile.is-variable.is-1-desktop.is-1-mobile
-              - if @posts.present?
+            - if @posts.present?
+              .columns.is-multiline.is-mobile.is-variable.is-1-desktop.is-1-mobile
                 = render partial: 'posts/post_image', collection: @posts
-              - else
+            - else
+              br
+              p.has-text-centered
                 = '投稿がありません'
+              br
             hr
             p.title.has-text-weight-bold.is-4
-              = "#{truncate(@user.name, length: 12)}のGear"
+              = "#{truncate(@user.name, length: 12)}のGears"
             p.subtitle.is-6
               | 投稿に紐づいたアイテム
-            .columns.is-multiline.is-mobile.is-variable.is-1-desktop.is-1-mobile
-              - if @posts.present?
+            - if @posts.present?
+              .columns.is-multiline.is-mobile.is-variable.is-1-desktop.is-1-mobile
                 = render partial: 'items/item_image', collection: @posts
-              - else
+            - else
+              br
+              p.has-text-centered
                 = '投稿がありません'
         br      
