--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -62,7 +62,7 @@ main
                 p.title.is-5.has-text-weight-semibold
                   = '参考になるデスクを見つけよう'
                 p.is-size-7.has-text-grey-lighter
-                  = '見返したい投稿は保存可能。「エンジニア」「動画制作者」など、カテゴリー別でも探せます。'
+                  = '見返したい投稿は保存可能。「エンジニア」「メディアクリエイター」など、カテゴリー別でも探せます。'
                 button.button.is-primary
                   = link_to 'デスク一覧', posts_path, class: 'has-text-white', data: { turbolinks: false }
             .column.has-text-centered
