--- a/app/views/admin/layouts/application.html.slim
+++ b/app/views/admin/layouts/application.html.slim
@@ -4,8 +4,7 @@ html
     = csrf_meta_tags
     = csp_meta_tag
 
-    = stylesheet_link_tag 'admin', media: 'all'
-    = javascript_pack_tag 'admin', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag "https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/css/adminlte.min.css"
   
     = display_meta_tags(default_meta_tags)
   body.hold-transition.sidebar-mini.layout-fixed
@@ -18,3 +17,5 @@ html
       = yield
 
     = render 'admin/shared/footer'
+
+    = javascript_pack_tag 'admin', 'data-turbolinks-track': 'reload'
