--- a/app/views/layouts/admin_login.html.slim
+++ b/app/views/layouts/admin_login.html.slim
@@ -11,7 +11,6 @@ html
     = csp_meta_tag
 
     = stylesheet_link_tag "admin", media: 'all'
-    = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
   
     = display_meta_tags(default_meta_tags)
 
@@ -19,3 +18,5 @@ html
     div
       = render 'shared/flash_message'
       = yield
+    
+    = javascript_pack_tag 'admin', 'data-turbolinks-track': 'reload'
